--- a/style/tonystyles.css
+++ b/style/tonystyles.css
@@ -64,8 +64,8 @@
 
 .spacing{
     margin: 0;
-    padding-top: 0%
+    padding-top: 0%;
     padding-bottom: 1px;
     border-bottom: 2px solid; 
-    color: 5F002B;
+    color: #5F002B;
 }
