--- a/style/styles.css
+++ b/style/styles.css
@@ -44,9 +44,15 @@ body {
 p {
     font-size: 20px;
     font-family: 'Montauk Regular', sans-serif;
+    color: #5F002B;
 }
 
-.caterHero-image {
+h1,h2{
+   color: #5F002B;
+    font-family: 'Fugaz One';
+}
+
+/* .caterHero-image {
     background-image: url("/imgs/cateringHero.jpg");
   
     height: 75%;
@@ -55,7 +61,7 @@ p {
     background-repeat: no-repeat;
     background-size:88%
     /* position: relative; */
-  }
+  
 
   body, html {
     height: 100%;
@@ -63,7 +69,7 @@ p {
 
 .caterBgWhite{
     background-color: white;
-    width: 88%;
+    /* width: 100%; */
     
 }
 .crtWhite{
@@ -85,3 +91,14 @@ p {
     height:60%;
 }
 
+.ctrBox{
+    background-image: url("/imgs/cateringMaine.jpg"); 
+    height:100%;
+    background-repeat: no-repeat;
+   
+    background-size: cover;
+    background-position: center;
+}
+.imgBorder{
+    border: 10px solid white;
+}
